name:                InfoNest-hs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/eggplantbren/InfoNest-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Brendon J. Brewer
maintainer:          brendon.brewer@gmail.com
copyright:           (c) 2017 Brendon J. Brewer
category:            Science
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  ghc-options:         -Wall -O2
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable Main
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -O2
  build-depends:       base
                     , InfoNest-hs
  default-language:    Haskell2010

test-suite InfoNest-hs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , InfoNest-hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/eggplantbren/InfoNest-hs
